# MeowAI-Home

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  RELEASE_CHECKLIST.md  cat-config.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml  web-ci.yml
Formula/: meowai.rb
cankao/clowder-ai-main/: .sync-provenance.json  LICENSE  cat-template.json  package.json  pnpm-lock.yaml  tsconfig.base.json
config/: cat-config.json  cat-config.yaml
docs/: ROADMAP.md
docs-site/: docusaurus.config.ts  package-lock.json
docs-site/docs/: intro.mdx
docs/decisions/: 014-xiaoyi-connector-gateway.md
docs/diary/: 001-orange-speaks.md  002-three-cats-collaboration.md  003-phase3-design.md  2026-04-14-auth-tests-and-upload.md  2026-04-14-cankao-alignment-analysis.md  2026-04-14-phase2-completion.md  2026-04-14-phasea-capability-orchestrator.md  2026-04-15-github-pr-automation.md  2026-04-15-limb-control-plane-complete.md  2026-04-15-mission-hub-workspace-enhancement.md  2026-04-15-p1-review-blockers-fix.md  2026-04-15-signal-study-depth.md  (+58 more)
memory/: MEMORY.md  phase4-1-skill-framework-complete.md  phase4-2-memory-system.md  phase4-2-skill-integration-complete.md  phase4-3-mcp-enhancement.md  phase5-webui-complete.md
meowai/: __init__.py  version.py
migrations/: add_thread_project_path.sql
ops/: prometheus.yml
packs/: review-pack.yaml  tdd-pack.yaml
scripts/: anthropic_proxy.py  dev.sh  install.sh  security_audit.py
skills/: manifest.yaml
tests/: __init__.py  test_version.py
web/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+627 files in other folders)
